--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -10,4 +10,5 @@ jobs:
     name: Test
     uses: jhae-de/jhae-de/.github/workflows/node-project-test.yaml@main
     with:
+      node-version: 20
       test-script: 'test'
