--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,6 +11,7 @@ jobs:
     name: Publish
     uses: jhae-de/jhae-de/.github/workflows/node-package-publish.yaml@main
     with:
+      node-version: 20
       package-version: ${{ github.ref_name }}
       needs-build: false
     secrets:
