--- a/package.json
+++ b/package.json
@@ -16,26 +16,27 @@
   "scripts": {
     "lint": "npm run-script lint:prettier && npm run-script lint:eslint",
     "lint:prettier": "prettier --ignore-path .gitignore --check .",
-    "lint:eslint": "eslint --ignore-path .gitignore .",
-    "test": "jest",
+    "lint:eslint": "eslint .",
+    "test": "NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest",
     "test:watch": "npm run-script test -- --watchAll"
   },
   "dependencies": {
-    "@jhae/stylelint-config-standard-scss": "^2.0.0"
+    "@jhae/stylelint-config-standard-scss": "^2.1.0"
   },
   "devDependencies": {
-    "@jhae/stylelint-rule-tester": "^1.0.0",
-    "@tsconfig/node20": "^20.1.2",
-    "@types/jest": "^29.5.6",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "@eslint/js": "^9.5.0",
+    "@jhae/stylelint-rule-tester": "^1.2.0",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/jest": "^29.5.12",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.6.0",
     "jest": "^29.7.0",
-    "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "prettier": "^3.3.2",
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.1"
   },
   "keywords": [
     "stylelint",
