--- a/index.yaml
+++ b/index.yaml
@@ -19,6 +19,11 @@ rules:
       ignore:
         - after-comment
   selector-max-id: 1
+  selector-no-qualifying-type:
+    - true
+    - ignore:
+        - attribute
+        - class
 
   # SCSS
   scss/at-each-key-value-single-line: true
@@ -31,9 +36,19 @@ rules:
     - always
     - ignore:
         - single-argument
+  scss/at-mixin-no-risky-nesting-selector:
+    - true
+    - message: Unexpected nested parent selector in @mixin rule (scss/at-mixin-no-risky-nesting-selector)
+  scss/at-root-no-redundant:
+    - true
+    - message: Unexpected @at-root rule (scss/at-root-no-redundant)
   scss/block-no-redundant-nesting: true
   scss/dimension-no-non-numeric-values: true
   scss/dollar-variable-colon-newline-after: always-multi-line
   scss/dollar-variable-colon-space-after: always-single-line
   scss/function-calculation-no-interpolation: true
+  scss/no-unused-private-members:
+    - true
+    - message: Expected usage of private member within the stylesheet (scss/no-unused-private-members)
   scss/property-no-unknown: true
+  scss/selector-no-redundant-nesting-selector: true
