--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: ghcr.io/jhae-de/node:20
     container_name: ${COMPOSE_PROJECT_NAME:-jhae-strict-scss-stylelint-config}-app
     environment:
-      HISTFILE: /home/user/workspace/.bash_history
+      HISTFILE: /home/user/workspace/.bash-history
     working_dir: /home/user/workspace
     volumes:
       - ./:/home/user/workspace
