--- a/package.json
+++ b/package.json
@@ -21,33 +21,36 @@
     "test:watch": "npm run-script test -- --watchAll"
   },
   "dependencies": {
-    "@jhae/stylelint-config-standard-scss": "^3.2"
+    "@jhae/stylelint-config-standard-scss": "^3.2",
+    "stylelint": "^16.10",
+    "stylelint-scss": "^6.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.12",
+    "@eslint/js": "^9.14",
     "@jhae/stylelint-rule-tester": "^1.4",
     "@tsconfig/node20": "^20.1",
     "@types/jest": "^29.5",
-    "eslint": "^9.12",
+    "eslint": "^9.14",
     "eslint-config-prettier": "^9.1",
     "eslint-plugin-prettier": "^5.2",
-    "globals": "^15.10",
+    "globals": "^15.12",
     "jest": "^29.7",
     "prettier": "^3.3",
     "ts-jest": "^29.2",
     "typescript": "^5.6",
-    "typescript-eslint": "^8.8"
+    "typescript-eslint": "^8.13"
   },
   "keywords": [
-    "stylelint",
-    "stylelint-scss",
-    "stylelintrc",
-    "configuration",
     "config",
+    "configuration",
+    "css",
     "rule",
     "rules",
+    "scss",
     "strict",
-    "css",
-    "scss"
+    "stylelint",
+    "stylelint-config",
+    "stylelint-scss",
+    "stylelintrc"
   ]
 }
