Disallow value none for outline property

--- a/index.yaml
+++ b/index.yaml
@@ -22,6 +22,8 @@ rules:
       - none
     border-left:
       - none
+    outline:
+      - none
   font-weight-notation: numeric
   property-no-unknown: null
   rule-empty-line-before:
