--- a/index.yaml
+++ b/index.yaml
@@ -61,6 +61,7 @@ rules:
   scss/function-calculation-no-interpolation:
     - true
     - message: Unexpected interpolation in calculation function (scss/function-calculation-no-interpolation)
+  scss/function-color-channel: true
   scss/no-unused-private-members:
     - true
     - message: Expected usage of private member within the stylesheet (scss/no-unused-private-members)
