--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/jhae-de"
   },
   "repository": {
-    "url": "https://github.com/jhae-de/stylelint-config-strict-scss.git",
+    "url": "git+https://github.com/jhae-de/stylelint-config-strict-scss.git",
     "type": "git"
   },
   "homepage": "https://github.com/jhae-de/stylelint-config-strict-scss",
@@ -21,24 +21,24 @@
     "test:watch": "npm run-script test -- --watchAll"
   },
   "dependencies": {
-    "@jhae/stylelint-config-standard-scss": "^3.2",
+    "@jhae/stylelint-config-standard-scss": "^4.0",
     "stylelint": "^16.10",
     "stylelint-scss": "^6.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14",
-    "@jhae/stylelint-rule-tester": "^1.4",
+    "@eslint/js": "^9.15",
+    "@jhae/stylelint-rule-tester": "^1.5",
     "@tsconfig/node20": "^20.1",
     "@types/jest": "^29.5",
-    "eslint": "^9.14",
+    "eslint": "^9.15",
     "eslint-config-prettier": "^9.1",
     "eslint-plugin-prettier": "^5.2",
     "globals": "^15.12",
     "jest": "^29.7",
     "prettier": "^3.3",
     "ts-jest": "^29.2",
-    "typescript": "^5.6",
-    "typescript-eslint": "^8.13"
+    "typescript": "^5.7",
+    "typescript-eslint": "^8.15"
   },
   "keywords": [
     "config",
