--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "type": "git"
   },
   "homepage": "https://github.com/jhae-de/stylelint-config-strict-scss",
+  "type": "module",
   "main": "index.yaml",
   "scripts": {
     "lint": "npm run-script lint:prettier && npm run-script lint:eslint",
@@ -33,7 +34,6 @@
     "eslint": "^9.16",
     "eslint-config-prettier": "^9.1",
     "eslint-plugin-prettier": "^5.2",
-    "globals": "^15.13",
     "jest": "^29.7",
     "prettier": "^3.4",
     "ts-jest": "^29.2",
