--- a/index.yaml
+++ b/index.yaml
@@ -56,6 +56,7 @@ rules:
   scss/dimension-no-non-numeric-values: true
   scss/function-calculation-no-interpolation: true
   scss/function-color-channel: true
+  scss/no-duplicate-load-rules: true
   scss/no-unused-private-members: true
   scss/property-no-unknown: true
   scss/selector-no-redundant-nesting-selector: true
