--- a/index.yaml
+++ b/index.yaml
@@ -38,6 +38,7 @@ rules:
     - ignore:
         - attribute
         - class
+  syntax-string-no-invalid: true
 
   # SCSS
   scss/at-each-key-value-single-line: true
