--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "type": "git"
   },
   "type": "module",
-  "main": "index.yaml",
+  "main": "./index.yaml",
+  "files": [
+    "./index.yaml"
+  ],
   "scripts": {
     "fix": "npm run-script fix:prettier && npm run-script fix:eslint",
     "fix:eslint": "eslint --fix .",
