--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -16,3 +16,6 @@ updates:
       - dependency-name: '*'
         update-types:
           - version-update:semver-major
+    cooldown:
+      semver-minor-days: 7
+      semver-patch-days: 1
