--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git"
   },
   "type": "module",
-  "main": "./index.yaml",
+  "exports": "./index.yaml",
   "files": [
     "./index.yaml"
   ],
@@ -28,13 +28,13 @@
     "test:watch": "npm run-script test -- --watchAll"
   },
   "dependencies": {
-    "@jhae/stylelint-config-standard-scss": "^7.0",
-    "stylelint": "^16.24",
-    "stylelint-scss": "^6.11"
+    "@jhae/stylelint-config-standard-scss": "^8.0",
+    "stylelint": "^17.0",
+    "stylelint-scss": "^7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22",
-    "@jhae/stylelint-config-verifier": "^1.3",
+    "@jhae/stylelint-config-verifier": "^2.0",
     "@types/jest": "^30.0",
     "eslint": "^9.22",
     "eslint-config-prettier": "^10.0",
