--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "typescript": "^5.0",
     "typescript-eslint": "^8.42"
   },
+  "engines": {
+    "node": ">=20.0"
+  },
   "keywords": [
     "config",
     "configuration",
