--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,6 +6,10 @@ on:
     types:
       - published
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   publish:
     name: Publish
@@ -14,5 +18,3 @@ jobs:
       node-version: 24
       package-version: ${{ github.ref_name }}
       needs-build: false
-    secrets:
-      node-auth-token: ${{ secrets.NODE_AUTH_TOKEN }}
