--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,7 +4,7 @@ updates:
     directory: /
     schedule:
       interval: cron
-      cronjob: '0 4 * * 6'
+      cronjob: 0 4 * * 6
       timezone: Europe/Berlin
     groups:
       version-updates:
